docs/7.52/md/abenstring_templates_separators.md
---
title: "Syntax"
description: |
  ... n ... r ... t ... Effect String templates interpret the character combinations n, r, and t as control characters. Control Character Meaning hexadecimal Value (UTF-8) n Line break 0A r Return 0D t Tabulator 09 A control character is replaced by its hexadecimal value (appropriate
version: "7.52"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenstring_templates_separators.htm"
abapFile: "abenstring_templates_separators.htm"
keywords: ["do", "if", "class", "data", "abenstring", "templates", "separators"]
---

* * *

SAP NetWeaver AS ABAP Release 752, ©Copyright 2017 SAP AG. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap.htm) →  [ABAP - Reference](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_reference.htm) →  [Processing Internal Data](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_data_working.htm) →  [Character String and Byte String Processing](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_data_string.htm) →  [Expressions and Functions for String Processing](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenstring_processing_expr_func.htm) →  [string\_exp - String Expressions](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapcompute_string.htm) →  [string\_exp - String Templates](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenstring_templates.htm) → 

String Templates - control\_characters

Syntax

... \\n ... \\r ... \\t ...

Effect

String templates interpret the character combinations \\n, \\r, and \\t as control characters.

Control Character

Meaning

hexadecimal Value (UTF-8)

\\n

Line break

0A

\\r

Return

0D

\\t

Tabulator

09

A control character is replaced by its hexadecimal value (appropriate to the current code page) in the memory of the character string created by the string template.

Notes

-   If a control character is to be displayed as literal text, it can be escaped by being prefixed with the escape character \\.

-   The control characters in string templates replace the use of some attributes of the class [CL\_ABAP\_CHAR\_UTILITIES](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencl_abap_char_utilities.htm).

-   The control characters have no effect on classical dynpros and [lists](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_dynpro_list.htm). They appear in a list output as the # character. However, you can see the effect in the textedit control, for example.

Example

The following example generates in code the representation of the results of a string template with the three possible control characters in the code page UTF-8, namely 0A0D09. The hexadecimal values 0A, 0D , and 09 stand for line break, return, and tabulator.

DATA(code) = cl\_abap\_codepage=>convert\_to( |\\n\\r\\t| ).

Example

The following example generates a three-row output in the textedit control.

cl\_demo\_text=>display\_string( |1\\n2\\n3| ).

Executable Example

[String Templates, Control Characters](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenstring_template_ctrlchar_abexa.htm)